<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="my_decks">My Decks</string>
    <string name="my_collection">My Collection</string>
    <string name="public_decks">Public Decks</string>
    <string name="card_database">Card Database</string>
    <string name="news">News</string>
    <string name="details">Details</string>
    <string name="out_of_date">Card Database is out of date!</string>
    <string name="sign_in_cancelled">Sign in cancelled!</string>
    <string name="no_internet_connection">No internet connection :(</string>
    <string name="sign_in_failed">Sign in failed :(</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_view">Sign in to view your %s!</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="sign_out_successful">Sign out successful!</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="is_coming_soon">%s is coming soon!</string>
    <string name="are_coming_soon">%s are coming soon!</string>
    <string name="decks">Decks</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="search_hint">Card Name - Case Sensitive!</string>
    <string name="results">Results Tracker</string>
    <string name="your_results">results</string>
    <string name="deck_name">Deck name</string>
    <string name="create">Create</string>
    <string name="new_deck">New Deck</string>
    <string name="filter">Filter</string>
    <string name="reset_filters">Clear Filters</string>
    <string name="faction">Faction</string>
    <string name="northern_realms">Northern Realms</string>
    <string name="monster">Monsters</string>
    <string name="skellige">Skellige</string>
    <string name="scoiatael">Scoia\'tael</string>
    <string name="neutral">Neutral</string>
    <string name="nilfgaard">Nilfgaard</string>
    <string name="type">Type</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="leader">Leader</string>
    <string name="rarity">Rarity</string>
    <string name="common">Common</string>
    <string name="rare">Rare</string>
    <string name="epic">Epic</string>
    <string name="legendary">Legendary</string>
    <string name="loading">Loading</string>
    <string name="about">About</string>
    <string name="pref_licenses">Open Source Licenses</string>
    <string name="pref_general">General</string>
    <string name="analytics">Anonymous Analytics</string>
    <string name="analytics_title">Enable Anonymous Analytics?</string>
    <string name="analytics_message">Roach would like to collect anonymous information about how you use the app. This information is used by the developer to learn which features to focus development on. The information is not shared with any 3rd party and is not used to identify or contact you.\n\nYou can opt in or out at anytime in the Settings.\n\nWould you like to opt in?</string>
    <string name="analytics_summary">Allow Roach to collect anonymous statistics to help future development of the app.</string>
    <string name="crowd_sourcing">Help Crowd Source Card Data</string>
    <string name="crowd_sourcing_summary">Help Roach get up to date quickly when a new Gwent patch is released by answering questions about cards that have been updated.</string>
    <string name="pref_appearance">Appearance</string>
    <string name="low_data">Low Data Mode</string>
    <string name="low_data_summary">Use lower resolution card images to reduce data usage.</string>
    <string name="show_images_in_list">Show Images in Card List</string>
    <string name="show_images_in_list_summary">When viewing cards in a list, show the card images.</string>
    <string name="in_collection">Variation #%1$d: \t %2$d</string>
    <string name="in_deck">%d in deck</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="no_card_art">No art available.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="contact">Contact Developer</string>
    <string name="melee">Melee</string>
    <string name="siege">Siege</string>
    <string name="ranged">Ranged</string>
    <string name="total">Total</string>
    <string name="total_cards">Total Cards</string>
    <string name="publish_deck">Publish Deck</string>
    <string name="my_stuff">My Gwent</string>
    <string name="gwent">Gwent</string>
    <string name="signed_out">Signed Out</string>
    <string name="keg_helper">Card Picker Helper</string>
    <string name="keg_helper_message">Our friends at Gwentify have built a tool to help you choose between cards you have received in a keg.\n\nBy clicking Go you will be leaving Roach and will be redirected to gwentify.com.</string>
    <string name="go">Go</string>
    <string name="strength">Strength: %d</string>
    <string name="event_cards">Event Cards</string>
    <string name="gold_units">Gold Units</string>
    <string name="silver_units">Silver Units</string>
    <string name="bronze_units">Bronze Units</string>
    <string name="this_deck">This Deck</string>
    <string name="add_card">Add Card</string>
    <string name="deck_summary">Deck Summary</string>
    <string name="deck_total_cards_value">%1$d/%2$d</string>
    <string name="total_strength">Total Strength</string>
    <string name="change_leader">Change Leader</string>
    <string name="deck_builder">Deck Builder</string>
    <string name="collection_manager">Collection Manager</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="new_name">New name</string>
    <string name="confirm_delete">Delete deck?</string>

    <string name="pref_attributions">Attributions</string>
    <string name="icon">Iconography</string>
    <string name="version">App Version</string>
    <string name="translations">Translations</string>
    <string name="polish">Polish</string>
    <string name="german">German</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>

    <string name="pref_locale">Card Data Language</string>
    <string name="pref_locale_summary">Language to display card data in.</string>
    <string name="change_language">Change card data language in the settings</string>

    <string name="flag_error">Report Mistake</string>
    <string name="related_cards">Related Cards</string>
    <string name="error_description">Description of mistake</string>
    <string name="send">Send</string>
    <string name="flag_error_title">Found a mistake?</string>
    <string name="flag_error_message">If there is a mistake in the card data, please provide a description of what is wrong so we can fix it as soon as possible!</string>
    <string name="update_patch">Update</string>
    <string name="mistake_reported">Mistake reported!</string>

    <string name="pref_notifications">Notifications</string>
    <string name="news_notifications">News</string>
    <string name="news_notifications_summary">Receive notifications about Gwent news.</string>
    <string name="none">None</string>
    <string name="patch_notifications">New Patches</string>
    <string name="patch_notifications_summary">Receive notifications when Roach is updated to a new Gwent patch.</string>
    <string name="loyalty">Loyalty</string>
    <string name="loyal">Loyal</string>
    <string name="disloyal">Disloyal</string>
    <string name="position">Position</string>
    <string name="event">Special</string>
    <string name="no_results">No results :(</string>

    <string name="update_check">Checking for Card Data Updates</string>
    <string name="update_database">Updating Card Database</string>
    <string name="update_available">Card database update available</string>
    <string name="update">Update</string>

    <string name="empty_cards">No cards</string>
    <string name="empty_cards_message">Try changing your filters or updating the card database.</string>
</resources>
