<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notifications">

        <CheckBoxPreference android:key="@string/pref_patch_notifications_key"
            android:title="@string/patch_notifications"
            android:summary="@string/patch_notifications_summary"
            android:defaultValue="true" />

        <ListPreference android:key="@string/pref_news_notifications_key"
            android:title="@string/news_notifications"
            android:summary="@string/news_notifications_summary"
            android:defaultValue="en"
            android:entryValues="@array/locales_news"
            android:entries="@array/locales_news_readable"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appearance">

        <ListPreference
            android:key="@string/pref_locale_key"
            android:title="@string/pref_locale"
            android:summary="@string/pref_locale_summary"
            android:dialogTitle="@string/pref_locale"
            android:entries="@array/locales_readable"
            android:entryValues="@array/locales" />
    </PreferenceCategory>
</PreferenceScreen>