<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_leader"
        android:icon="@drawable/ic_leader"
        app:showAsAction="ifRoom"
        android:title="@string/change_leader">

        <menu>
            <item
                android:id="@+id/action_leader_1"
                android:title="@string/change_leader" />
            <item
                android:id="@+id/action_leader_2"
                android:title="@string/change_leader" />
            <item
                android:id="@+id/action_leader_3"
                android:title="@string/change_leader" />
        </menu>

    </item>

    <item android:id="@+id/action_rename"
        app:showAsAction="never"
        android:title="@string/rename" />

    <item android:id="@+id/action_delete"
        app:showAsAction="never"
        android:title="@string/delete" />
</menu>