<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_850">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/subheader_factions"
            android:text="@string/faction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Factions -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_faction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/subheader_factions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_nr"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/northern_realms" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_mon"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monster" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_sk"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skellige" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_sc"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoiatael" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_ng"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nilfgaard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_faction_ne"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neutral" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/subheader_colours"
            android:text="@string/color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@id/group_faction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Colour -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_colour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/subheader_colours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_color_bronze"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bronze" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_color_gold"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_color_leader"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leader" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/subheader_rarity"
            android:text="@string/rarity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@id/group_colour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Rarity -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_rarity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/subheader_rarity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_rarity_common"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_rarity_rare"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rare" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_rarity_epic"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/epic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_rarity_legendary"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legendary" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/subheader_provisions"
            android:text="@string/provisions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@id/group_rarity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Rarity -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_provisions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/subheader_provisions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        </com.google.android.material.chip.ChipGroup>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>