<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.Gwent"
    android:background="@color/grey_850">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/text_secondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:textColor="@color/text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/deck_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Factions -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/groupFaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:checked="true"
                android:id="@+id/faction_nr"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/northern_realms" />

            <com.google.android.material.chip.Chip
                android:id="@+id/faction_mon"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monster" />

            <com.google.android.material.chip.Chip
                android:id="@+id/faction_sk"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skellige" />

            <com.google.android.material.chip.Chip
                android:id="@+id/faction_sc"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoiatael" />

            <com.google.android.material.chip.Chip
                android:id="@+id/faction_ng"
                style="@style/Widget.MaterialComponents.Chip.Filter.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nilfgaard" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnCreate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_deck"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/groupFaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>