<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <include layout="@layout/item_card_core" android:id="@+id/card_core" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_core"
        android:id="@+id/collection_controls">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/in_collection"
            android:id="@+id/collection_count" />

        <Button
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_card"
            android:text="@string/add"
            android:textColor="@color/gwentGreen"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_toLeftOf="@id/add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove_card"
            android:text="@string/remove"
            android:textColor="@color/gwentGreen"
            style="?android:borderlessButtonStyle" />

    </RelativeLayout>

</RelativeLayout>