<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/type_values"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:listDivider"
        android:dividerPadding="2.5dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/total_cards"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/deck_total_cards"
                android:text="@string/deck_total_cards_value"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/silver"
                android:text="@string/silver"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/deck_silver"
                android:text="@string/deck_total_cards_value"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/gold"
                android:text="@string/gold"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/deck_gold"
                android:text="@string/deck_total_cards_value"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>